# spot_arm

./: .gitignore
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/config/: joint_names_robotic_arm.yaml  robot_control.yaml  robot_controllers.yaml  rviz_config_robotic_arm_adesh.rviz
src/robotic_arm/gazebo_models/collision/: arm_base_collision.stl  arm_link_1_collision.stl  arm_link_2_collision.stl
src/robotic_arm/gazebo_models/collision/capstan_collision/: capstan_collision.stl
src/robotic_arm/gazebo_models/visual/: arm_base.stl  arm_link_1.stl  arm_link_2.stl
src/robotic_arm/launch/: display.launch  gazebo.launch  spawn_arm_w_controller.launch  test_model.launch
src/robotic_arm/meshes/: arm_base.STL  arm_link_1.STL  arm_link_2.STL  base_link.STL  capstan_drive.STL
src/robotic_arm/urdf/: combined_robot.urdf.xacro  robotic_arm.csv  robotic_arm.urdf  robotic_arm_full.urdf  spot-arm.urdf
src/robotic_arm_1/: CMakeLists.txt  package.xml
src/robotic_arm_1/config/: joint_names_robotic_arm_1.yaml
src/robotic_arm_1/launch/: display.launch  gazebo.launch  test_xacro_launch.launch
src/robotic_arm_1/meshes/: Capstan_arm_link.STL  arm_base_link.STL  arm_link_1.STL  arm_link_2.STL
src/robotic_arm_1/urdf/: robotic_arm_1.csv  robotic_arm_1.urdf  robotic_arm_1.xacro  robotic_arm_11.urdf
src/robots/: install_descriptions
src/robots/configs/spot_config/launch/: spot-arm_bringup.launch
